src/styles/css/main.stylesheet.css
/* ... */
.account-btn:hover {
    border-bottom: 1px solid white;
}

.user-field {
    display: inline-block;
    max-width: 11rem;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    text-align: right;
}

@media (max-width: 991px) {
    .user-field {
        visibility: hidden;
    }
}

.signIn-btn {
    color: var(--text-primary);
}

.cur-user,
.signIn-btn {
    color: #fff;
}

.signIn-btn:hover {
    color: var(--text-primary);
}

.logo {
    background: url(./assets/logo.svg) center/cover;
    height: 30px;
    width: 105px;
    display: inline-block;
    margin-right: 36px;
}

.quick-btn {
    display: flex;
    position: absolute;
    width: 400px;
    height: 33px;
    top: 90px;
    right: 280px;
    border-radius: 7px;
    z-index: 100;
}

.quick-btn > div {
    margin: auto;
}

.quick-btn > div > button {
    margin: auto;
    border: none;
}

.quick-btn-save-online {
    background: url(./assets/shorcuts/save-online.svg) center/cover;
    width: 21.43px;
    height: 15.2px;
    display: block;
}

.quick-btn-save {
    background: url(./assets/shorcuts/save.svg) center/cover;
    width: 15.2px;
    height: 15.2px;
    display: block;
}

.quick-btn-delete {
    background: url(./assets/shorcuts/delete.svg) center/cover;
    width: 20px;
    height: 15.2px;
    display: block;
}

.quick-btn-download {
    background: url(./assets/shorcuts/download.svg) center/cover;
    width: 15.2px;
    height: 15.2px;
    display: block;
}

.quick-btn-zoom-fit {
    background: url(./assets/shorcuts/fit.svg) center/cover;
    width: 15.2px;
    height: 15.2px;
    display: block;
}

.quick-btn-undo {
    background: url(./assets/shorcuts/undo.svg) center/cover;
    width: 15.2px;
    height: 16.2px;
    display: block;
}

.quick-btn-redo {
    background: url(./assets/shorcuts/redo.svg) center/cover;
    width: 15.2px;
    height: 16.2px;
    display: block;
}

.quick-btn-view {
    color: white;
}
/* dropdown-menu styles */

.dropdown > ul {
    border-radius: 5px;
    text-align: center;
    position: absolute;
    left: 50%;
    transform: translate(-50%, 13px);
}

.draggable-panel-css {
    border-radius: 5px;
    z-index: 70;
    transition: background 0.5s ease-out;
    position: fixed;
}

@supports (backdrop-filter: blur()) {
    .dropdown > ul {
        backdrop-filter: blur(5px);
    }
}

.mw-override {
    min-width: 110px;
}

.dropdown > ul::before {
    background-color: transparent;
    content: '';
    width: 10px;
    display: inline-block;
    height: 10px;
    position: absolute;
    transform: translate(-50%, -13px) rotate(-45deg);
}

.dropdown > ul::after {
    content: '';
    width: 11.5px;
    display: inline-block;
    height: 10px;
    position: absolute;
    transform: translate(-50%, -15.5px);
    top: 14.5px;
}

.dropdown-menu > li > a {
    padding: 7px 0;
    width: 90%;
    margin: auto;
    transition: all 0.2s ease-in-out;
    text-align: left;
    padding-left: 10px;
}

.dropdown-menu > li > a:hover {
    border-radius: 7px;
    opacity: 1;
}

@media (max-width: 991px) {
    .navbar-nav .dropdown-menu {
        position: absolute !important;
        float: none;
    }
}

#contextMenu {
    width: 150px;
    visibility: hidden;
    position: fixed;
    z-index: 1000;
    opacity: 0;
    top: 100;
    left: 100;
    cursor: pointer;
    padding-bottom: 7px;
    padding-top: 7px;
    -webkit-user-select: none;
    -moz-user-select: none;
    user-select: none;
    border-radius: 5px;
}

#contextMenu ul {
    margin: 0;
    padding: 0;
}

#contextMenu ul li {
    list-style: none;
    padding: 8px;
    padding-left: 20px;
    width: 90%;
    margin: auto;
}

#contextMenu ul li:hover {
    border-radius: 7px;
    opacity: 1;
}

@supports (backdrop-filter: blur()) {
    #contextMenu {
        backdrop-filter: blur(5px);
    }
    #contextMenu ul li:hover {
        backdrop-filter: blur(50px);
        -webkit-backdrop-filter: blur(50px);
    }
}

/** ce-panel styling  starts */

.ce-panel {
    font: inherit;
    width: 240px;
    top: 90px;
    left: 10px;
}

.accordion > :last-child {
    margin-bottom: 15px;
}

.draggable-panel-css .panel-header {
    border-radius: 5px;
    border-top-right-radius: 5px;
    padding-top: 15px;
    padding: 10px;
    padding-top: 15px;
    padding-left: 17px;
    font-weight: bold;
    font-size: 16px;
    text-transform: uppercase;
    text-align: left;
    cursor: move;
}

.draggable-panel-css .panel-header::before {
    content: '';
    width: 34px;
    border-radius: 2px;
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    top: 6px;
}

.draggable-panel-css .panel-body {
    padding-top: 10px;
}

.draggable-panel-css .panel {
    padding: 0em;
    margin: 0;
    border-radius: 0;
    margin-bottom: 0em;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    max-height: 185px;
    border-radius: 2px;
    overflow: auto;
}

.ui-accordion-header {
    background-color: transparent;
    margin: 0em;
    padding: 0em;
    outline: none;
}

.ui-accordion-header.ui-accordion-header-active.ui-state-active {
    outline: none;
}

.ui-accordion-header.ui-state-hover {
    outline: none;
}

.ui-accordion-header-icon.ui-icon {
    display: none;
}

.accordion {
    width: 90%;
    margin: auto;
    position: relative;
}

/* expansion panel styles - start */
.v-expansion-panel {
    background-color: transparent;
    color: var(--text-panel);
}
.v-expansion-panel--active > .v-expansion-panel-title {
    min-height: 48px;
}
.v-expansion-panel-title__overlay {
    border-radius: 3px;
    outline: none;
    background-color: #ededed;
    font-weight: 400;
}

.v-expansion-panel__shadow {
    box-shadow: none;
}

.v-expansion-panel-title {
    cursor: pointer;
    position: relative;
    margin: 2px 0 0;
    padding: 0 0.5em 0 0.7em;
    font-size: 100%;
    font-weight: 400;
    line-height: 1.3;
}

.v-expansion-panel-text {
    background-color: var(--text-panel);
    color: black;
}
/* ... */

